--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,14 @@ padding: 0;
   box-sizing: border-box !important;
 }
 
-body {
+html, body {
   overflow-x: hidden;
+  max-width: 100%;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
 }
 :root{
  /* ========================================
